# clone_auto

./: LICENSE  README.md  pyproject.toml
src/: clone_auto.py  term_args.py
